Merged FILE-FOLDER-API (5.2.0) to HEAD (5.2)    123868 jkaabimofrad: RA-856: Added support for REST APIs “/content” endpoints to optionally set their own cache. (Currently, only the Renditions API is setting its own cache)        - Removed the http attachment header setting from the AbstractResourceWebScript, as the ContentStreamer already has this feature        - Reformatted ContentStreamer according to Alfresco code standards
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/alfresco/HEAD/root@126543 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261